{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 28,
  "lineage": "ce4f91f2-a36c-d588-3590-fe3c6aff987e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3dc6c9598c4b877",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0a9f66ad0b67b683a",
            "domain": "vpc",
            "id": "eipalloc-0c3dc6c9598c4b877",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0eb47e792c739bfdc",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-108-14-60.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.14.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "aws_internet_gateway.dev-gw",
            "aws_network_interface.dev-server-nic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.dev1-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:internet-gateway/igw-079a0fac1b7ac9260",
            "id": "igw-079a0fac1b7ac9260",
            "owner_id": "470702883802",
            "tags": {
              "Name": "dev-gw"
            },
            "tags_all": {
              "Name": "dev-gw"
            },
            "vpc_id": "vpc-043413e3743857403"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:network-interface/eni-0eb47e792c739bfdc",
            "id": "eni-0eb47e792c739bfdc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:9e:16:7f:62:a4",
            "owner_id": "470702883802",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dc870ce1f9b8e92c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017d43417609609c9"
          },
          "dependencies": [
            "aws_security_group.allow-web-traffic",
            "aws_subnet.dev1-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:route-table/rtb-0f97dd37ce00d55f6",
            "id": "rtb-0f97dd37ce00d55f6",
            "owner_id": "470702883802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079a0fac1b7ac9260",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079a0fac1b7ac9260",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt"
            },
            "tags_all": {
              "Name": "dev-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-043413e3743857403"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev1-sub-to-dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cdba82113256286",
            "route_table_id": "rtb-0f97dd37ce00d55f6",
            "subnet_id": "subnet-017d43417609609c9"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev1-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev2-sub-to-dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b6e3f75282f586a",
            "route_table_id": "rtb-0f97dd37ce00d55f6",
            "subnet_id": "subnet-0f15fb7bc80de5dca"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev2-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:security-group/sg-0dc870ce1f9b8e92c",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc870ce1f9b8e92c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "470702883802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-web"
            },
            "tags_all": {
              "Name": "allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-043413e3743857403"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:subnet/subnet-017d43417609609c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-017d43417609609c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470702883802",
            "tags": {
              "Name": "dev1-subnet"
            },
            "tags_all": {
              "Name": "dev1-subnet"
            },
            "vpc_id": "vpc-043413e3743857403"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:subnet/subnet-0f15fb7bc80de5dca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f15fb7bc80de5dca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470702883802",
            "tags": {
              "Name": "dev2-subnet"
            },
            "tags_all": {
              "Name": "dev2-subnet"
            },
            "vpc_id": "vpc-043413e3743857403"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:470702883802:vpc/vpc-043413e3743857403",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aad45335b0385b6e",
            "default_route_table_id": "rtb-00fdd1cda62b81a07",
            "default_security_group_id": "sg-057c486c5fa212948",
            "dhcp_options_id": "dopt-cad100a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-043413e3743857403",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00fdd1cda62b81a07",
            "owner_id": "470702883802",
            "tags": {
              "Name": "development"
            },
            "tags_all": {
              "Name": "development"
            }
          }
        }
      ]
    }
  ]
}